--- a/GUI/FXMLcategory.fxml
+++ b/GUI/FXMLcategory.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -17,34 +15,9 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.connexion4se3.GUI.FXMLcategoryController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.connexion4se3.GUI.FXMLcategoryController">
     <children>
       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="740.0" prefWidth="1220.0">
-         <left>
-            <VBox prefHeight="740.0" prefWidth="230.0" spacing="50.0" styleClass="primary-color" stylesheets="@fxmlprofil.css" BorderPane.alignment="CENTER">
-               <children>
-                  <VBox alignment="CENTER" prefHeight="320.0" prefWidth="340.0" spacing="15.0">
-                     <children>
-                        <Label alignment="CENTER" prefHeight="30.0" prefWidth="207.0" text="Admin Dashborad" textAlignment="CENTER" textFill="WHITE">
-                           <font>
-                              <Font name="Cambria Bold" size="24.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </VBox>
-                  <Label prefHeight="36.0" prefWidth="625.0" text="    Evenement" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-                  <Label prefHeight="36.0" prefWidth="625.0" text="    Category" textFill="WHITE">
-                     <font>
-                        <Font size="25.0" />
-                     </font>
-                  </Label>
-               </children>
-            </VBox>
-         </left>
          <center>
             <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
@@ -92,7 +65,7 @@
                         </Button>
                      </children>
                   </VBox>
-                  <TableView fx:id="tvCategory" layoutX="235.0" layoutY="69.0" onMouseClicked="#handleMouseClicked" prefHeight="651.0" prefWidth="736.0" style="-fx-background-color: #212121;">
+                  <TableView fx:id="tvCategory" layoutX="235.0" layoutY="2.0" onMouseClicked="#handleMouseClicked" prefHeight="718.0" prefWidth="314.0" style="-fx-background-color: #212121;">
                      <columns>
                         <TableColumn fx:id="colId" prefWidth="68.0" text="id" />
                         <TableColumn fx:id="colType" prefWidth="62.0" text="type" />
@@ -112,11 +85,6 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Button>
-                  <ImageView fitHeight="27.0" fitWidth="39.0" layoutX="164.0" layoutY="237.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/ok.png" />
-                     </image>
-                  </ImageView>
                   <Button fx:id="btnclear" layoutX="54.0" layoutY="276.0" mnemonicParsing="false" onAction="#Clear" prefHeight="29.0" prefWidth="82.0" style="-fx-background-color: #424242; -fx-border-color: #FFFFFF;" text="Clear">
                      <textFill>
                         <LinearGradient endX="1.0" endY="1.0">
@@ -139,6 +107,7 @@
                         </Label>
                      </children>
                   </HBox>
+                  <Button fx:id="cultureButton" layoutX="865.0" layoutY="16.0" onAction="#navigateToCulture" text="Culture Page" />
                </children>
             </Pane>
          </center>
