--- a/GUI/culture.fxml
+++ b/GUI/culture.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
@@ -50,6 +49,7 @@
                           </Button>
                           <Button fx:id="btnDelete" layoutX="13.0" layoutY="161.0" mnemonicParsing="false" onAction="#Delete" prefHeight="34.0" prefWidth="158.0" text="Supprimer Evenement" textFill="#259d31">
                           </Button>
+                    <Button fx:id="categoryButton" layoutX="1101.0" layoutY="12.0" onAction="#navigateToCategory" text="Category Page" />
                     </children>
                 </Pane>
             </center>
